@@ -9,36 +9,38 @@
 <div id="ps-main-nav">
 	this is the navagation block
 </div>
-{* *}
+*}
 
 <!--content block-->
 <div id="ps-main-content" class="ps-page-index">
-<form action="{url}" method="get">
 	<div id="ps-page-title">
+		<div id="ps-title-logo">
+			<img src="{theme->url}/img/tfc_comp_64X64.webp" alt="Team Fortress Classic" width="64" height="64">
+		</div>
 		<div class="inner">
-		<span>
-			<input id='q-hdr' type="text" name="q" value="{if $results}{$results.phrase|escape}{else}{$q|escape}{/if}" class="field search" maxlength="50">
-			<input name="sort" value="{$sort|escape}" type="hidden">
-			<input name="order" value="{$order|escape}" type="hidden">
-			<a href="index.php" title="<#Clear Search#>" alt="<#Clear Search#>"><img id="ps-search-clear" src="{theme->parent_url}/img/icons/turd.gif"></a>
+		<form action="{url}" method="get">
+			<span>
+				<input id='q-hdr' type="text" name="q" value="{if $results}{$results.phrase|escape}{else}{$q|escape}{/if}" class="field search" maxlength="50">
+				<input name="sort" value="{$sort|escape}" type="hidden">
+				<input name="order" value="{$order|escape}" type="hidden">
+				<a href="index.php" title="<#Clear Search#>" alt="<#Clear Search#>"><img id="ps-search-clear" src="{theme->parent_url}/img/icons/turd.gif"></a>
 {*
-			<input type="image" src="{theme->parent_url}/img/icons/bullet_go.gif" style="vertical-align: middle">
+				<input type="image" src="{theme->parent_url}/img/icons/bullet_go.gif" style="vertical-align: middle">
 *}
-		</span>
-		<h1><img src="{theme->url}/img/icons/tfc_icon(16X16).gif" height="16" width="16" alt="Team Fortress Classic">&nbsp;&nbsp;<#Player Statistics for Team Fortress Classic#></h1>
+			</span>
+		</form>
+		<h1><#Player Statistics for Team Fortress Classic#></h1>
 		<h2>
-{if $search}
+		{if $search}
 			<#Search criteria#> "<em>{$results.phrase|escape}</em>" <#matched#> <strong>{$total.ranked|commify}</strong> <#ranked players out of#> <strong>{$total.all|commify}</strong> <#total#>
 			{if $i_bots}— <small>BOT stats are included in player stats but BOT's are not listed</small>{/if}
-{else}
+		{else}
 			<strong>{$total.ranked|commify}</strong> <#players rank out of#> <strong>{$total.absolute|commify}</strong> <#total#>
 			{if $i_bots}— <small>BOT stats are included in player stats but BOT's are not listed</small>{/if}
-{/if}
+		{/if}
 		</h2>
 		</div>
 	</div>
-</form>
-
 	<div class="ps-table-frame no-ani">
 	<div class="ps-table-header">{$pager}</div>
 	<div class="ps-table-inner">
