@@ -15,3 +15,4 @@ Version 3.2.8n (in progress)
 * [Added] Header note when bot stats are included in human stats but bots are not listed.
 * [Improved] The CC theme is now a child theme.
 * [Improved] Streamlined the CSS of child themes.
+* [Improved] Larger TFC icon on player page.
